# tg-monorepo

./: .gitignore  README.md
agent-orchestrator/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  agent_manager.py  chat_interface.html  config.py  langchain_mvc_agent.py  main.py  pyproject.toml  test_chat_interface.py
agent-orchestrator/docs/: pipeline.md
agent-orchestrator/examples/: __init__.py  alert.json  complex_alert.py  custom_pipeline_step.py  register_custom_steps.py  request.curl  send_alert.py
agent-orchestrator/src/: __main__.py  agent_manager.py  chat_session_manager.py  config.py  logger.py  mcp_client.py  mcp_tools.py  models.py  pipeline_processor.py  pipeline_steps.py
agent-orchestrator/src/processors/: __init__.py  alert_processing_step.py  ioc_extractor_step.py  ip_lookup.py  llm_chat_step.py  mcp_query_step.py  pipeline_processor.py  prompt_generation_step.py  response_formatting_step.py  retrieval_engine_step.py  translation_engine_step.py
agent-orchestrator/src/tools/: __init__.py  historical_data.py  ip_lookup.py  math_tools.py  mcp_tools.py  playbook_rag.py  port_analyzer.py  threat_assessment.py
agent-orchestrator/used_alerts/: brute_force_ssh.json  regular_brute_force.json
here/: __init__.py  agent_manager.py  config.py  demo_alerts.http  main.py  mcp_client.py  mcp_query_step.py  mcp_tools.py  prompt_generation_step.py  pyproject.toml  response_formatting_step.py  threat_assessment.py  translation_engine_step.py
mcp-api/: Makefile  pyproject.toml  server.py
mvc-api/: Makefile  pyproject.toml  server.py
rag/: ingest_pdf.py  pyproject.toml  test_search.py
rag/infra/: docker-compose.yml
webhook-receiver/: .gitignore  Dockerfile  docker-compose.yml  go.mod  main.go
webhook-receiver/config/: config.go
webhook-receiver/handlers/: webhook.go
webhook-receiver/middleware/: auth.go
